[gd_scene load_steps=22 format=3 uid="uid://c0yw1dowah4pv"]

[ext_resource type="Script" uid="uid://b3bnay6xj0k6k" path="res://grey_cat.gd" id="1_epypp"]
[ext_resource type="Script" uid="uid://c6aavq1ke5txd" path="res://node_2d.gd" id="1_rj586"]
[ext_resource type="Texture2D" uid="uid://cyuk56ee0vpho" path="res://assets/images/background.png" id="2_4d7sh"]
[ext_resource type="AudioStream" uid="uid://b6ni2dmd1ofrt" path="res://assets/audio/wiwiwi.mp3" id="2_kdubu"]
[ext_resource type="Script" uid="uid://5dm3m78gkudm" path="res://orange_cat.gd" id="3_0hol4"]
[ext_resource type="Script" uid="uid://bj1kmacnw8sxm" path="res://character_body_2d.gd" id="3_kdubu"]
[ext_resource type="AudioStream" uid="uid://dycjbm7e04h2r" path="res://maah.mp3" id="4_q6r6c"]
[ext_resource type="Texture2D" uid="uid://cl6jq43pj48lg" path="res://assets/images/chat a (1).png" id="5_q6r6c"]
[ext_resource type="Texture2D" uid="uid://cy3tfdho2vyly" path="res://assets/images/chat b (1).png" id="7_d21ai"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q6r6c"]
atlas = ExtResource("5_q6r6c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdubu"]
atlas = ExtResource("5_q6r6c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d21ai"]
atlas = ExtResource("5_q6r6c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj586"]
atlas = ExtResource("5_q6r6c")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d7sh"]
atlas = ExtResource("5_q6r6c")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ir8iy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6r6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdubu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d21ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj586")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7sh")
}],
"loop": true,
"name": &"meowing",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ir8iy"]
atlas = ExtResource("7_d21ai")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqns4"]
atlas = ExtResource("7_d21ai")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ka3"]
atlas = ExtResource("7_d21ai")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h7mo"]
atlas = ExtResource("7_d21ai")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr8wp"]
atlas = ExtResource("7_d21ai")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_d2bti"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir8iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqns4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ka3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h7mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr8wp")
}],
"loop": false,
"name": &"orangee",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rj586")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(588.5, 336)
scale = Vector2(0.872119, 1)
texture = ExtResource("2_4d7sh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1157.0
offset_bottom = 659.0

[node name="grey_cat" type="Button" parent="Control"]
layout_mode = 0
offset_left = 855.0
offset_top = 440.0
offset_right = 886.0
offset_bottom = 498.0
toggle_mode = true
script = ExtResource("1_epypp")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Control/grey_cat"]
stream = ExtResource("2_kdubu")

[node name="CharacterBody2D" type="CharacterBody2D" parent="Control/grey_cat"]
position = Vector2(-759, -439)
script = ExtResource("3_kdubu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control/grey_cat/CharacterBody2D"]
position = Vector2(768, 434)
scale = Vector2(2.125, 2.17188)
sprite_frames = SubResource("SpriteFrames_ir8iy")
animation = &"meowing"
frame = 4

[node name="orange_cat" type="Button" parent="Control"]
layout_mode = 0
offset_left = 353.0
offset_top = 442.0
offset_right = 390.0
offset_bottom = 489.0
script = ExtResource("3_0hol4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Control/orange_cat"]
stream = ExtResource("4_q6r6c")

[node name="CharacterBody2D" type="CharacterBody2D" parent="Control/orange_cat"]
script = ExtResource("3_kdubu")

[node name="AnimatedSprite2Dd" type="AnimatedSprite2D" parent="Control/orange_cat/CharacterBody2D"]
position = Vector2(19, -15)
scale = Vector2(2.0625, 2.25781)
sprite_frames = SubResource("SpriteFrames_d2bti")
animation = &"orangee"

[connection signal="pressed" from="Control/grey_cat" to="Control/grey_cat/CharacterBody2D" method="_on_grey_cat_pressed"]
[connection signal="toggled" from="Control/grey_cat" to="Control/grey_cat" method="_on_toggled"]
[connection signal="pressed" from="Control/orange_cat" to="." method="_on_orange_cat_pressed"]
[connection signal="pressed" from="Control/orange_cat" to="Control/orange_cat" method="_on_pressed"]
